--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: sunyrora@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Sunyrora's Blog.
 baseurl: # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: https://sunyrora.github.io # the base hostname & protocol for your site
 permalink: ":title/"
 excerpt_separator: <!--more-->
 
@@ -31,7 +31,7 @@ twitter_username:
 github_username:  sunyrora
 
 # Disqus
-discus-identifier: 
+discus-identifier: sunyrora
 
 # Tracker
 analytics: "UA-116752075-1" # Google Analytics
@@ -74,6 +74,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+      comments: true
   -
     scope:
       path: "categories"
