Style: Markdonw highlight style change
- In the config.yml: rouge syntax-highlighter line_numbers option true

- modify padding, margin, color a little bit

--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ kramdown:
   hard_wrap:     false
   footnote_nr:   1
   show_warnings: false
+  syntax_highlighter_opts:
+    line_numbers: true
 
 plugins:
   - jekyll-sitemap
